--- a/Reynolda Project.Rmd
+++ b/Reynolda Project.Rmd
@@ -1,30 +1,33 @@
 ---
 title: "Reynolda Project"
-author: "Iris"
+author: "Iris Liu and Lucy D'Agostino McGowan"
 date: "12/5/2019"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+
+## Load packages
+
+```{r load-packages}
+library(tidyverse)
+library(googlesheets4)
+library(tidytext)
+```
+## Read in data
+
+```{r load-data}
+id <- as_sheets_id("1i9dp59vJUwtwWH0YpipB8qsimyWn_votB8y7n_al8zA")
+df <- sheets_read(id)
 ```
 
-## R Markdown
+## Perform a text analysis
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r unnest}
+df %>%
+  select(resonated) %>%
+  unnest_tokens(word, resonated) %>%
+  group_by(word) %>%
+  count(sort = TRUE)
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
